--- a/package.json
+++ b/package.json
@@ -1,44 +1,54 @@
 {
   "name": "dexterous",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "homepage": "https://lemonpole.github.io/dexterous/",
+  "bugs": {
+    "url": "https://github.com/lemonpole/dexterous/issues",
+    "email": "help@steverivera.io"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lemonpole/dexterous/"
+  },
   "scripts": {
-    "build": "react-scripts build",
+    "build": "craco build",
     "deploy": "npx gh-pages -d build -m \"$(git log -1 --pretty=%B)\"",
-    "eject": "react-scripts eject",
+    "dev": "concurrently \"yarn start\" \"yarn generate --watch\"",
+    "generate": "graphql-codegen",
     "predeploy": "npm run build",
-    "start": "cross-env GENERATE_SOURCEMAP=false react-scripts start",
-    "test": "react-scripts test"
+    "start": "craco start"
   },
   "dependencies": {
-    "@blueprintjs/core": "^4.5.0",
-    "@blueprintjs/icons": "^4.3.0",
-    "@blueprintjs/select": "^4.4.0",
-    "classnames": "^2.3.1",
-    "localforage": "^1.10.0",
+    "@apollo/client": "^3.6.9",
+    "@chakra-ui/icons": "^2.0.2",
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "apollo3-cache-persist": "^0.14.1",
+    "framer-motion": "^6.3.16",
+    "graphql": "^16.5.0",
     "lodash": "^4.17.21",
-    "pokenode-ts": "^1.14.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-infinite-scroller": "^1.2.6",
-    "react-router-dom": "6",
-    "sass": "^1.52.3",
-    "typescript": "^4.7.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^16.11.39",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-infinite-scroller": "^1.2.3",
-    "cross-env": "^7.0.3",
-    "react-scripts": "5.0.1"
+    "@craco/craco": "^6.4.3",
+    "@graphql-codegen/cli": "2.8.1",
+    "@graphql-codegen/typed-document-node": "^2.3.1",
+    "@graphql-codegen/typescript": "2.7.1",
+    "@graphql-codegen/typescript-operations": "2.5.1",
+    "@types/node": "^12.20.55",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "concurrently": "^7.2.2",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.7.4",
+    "workbox-webpack-plugin": "^6.5.3"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -51,5 +61,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "codegen": {
+    "schema": "https://beta.pokeapi.co/graphql/v1beta",
+    "documents": "./src/**/*.graphql",
+    "overwrite": true,
+    "generates": {
+      "src/lib/graphql.ts": {
+        "plugins": [
+          "typescript",
+          "typescript-operations",
+          "typed-document-node"
+        ]
+      }
+    }
   }
 }
