--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,10 @@
   "compilerOptions": {
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
-    "baseUrl": "./src",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "jsx": "react-jsx",
     "isolatedModules": true,
+    "jsx": "react-jsx",
     "lib": [
       "dom",
       "dom.iterable",
@@ -19,13 +18,8 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "es5",
-    "typeRoots": [
-      "./node_modules/@types",
-      "./typings"
-    ]
+    "target": "es5"
   },
-  "include": [
-    "src"
-  ]
+  "extends": "./craco.tsconfig.json",
+  "include": [ "src" ]
 }
