--- a/package.json
+++ b/package.json
@@ -14,38 +14,38 @@
   "scripts": {
     "build": "craco build",
     "deploy": "npx gh-pages -d build -m \"$(git log -1 --pretty=%B)\"",
-    "dev": "concurrently \"yarn start\" \"yarn generate --watch\"",
+    "dev": "concurrently \"npm start\" \"npm run generate --watch\"",
     "generate": "graphql-codegen",
     "predeploy": "npm run build",
     "start": "craco start"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
-    "@chakra-ui/icons": "^2.0.2",
-    "@chakra-ui/react": "^2.2.1",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "apollo3-cache-persist": "^0.14.1",
-    "framer-motion": "^6.3.16",
-    "graphql": "^16.5.0",
-    "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "@apollo/client": "3.6.9",
+    "@chakra-ui/icons": "2.0.2",
+    "@chakra-ui/react": "2.2.1",
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
+    "apollo3-cache-persist": "0.14.1",
+    "framer-motion": "6.3.16",
+    "graphql": "16.5.0",
+    "lodash": "4.17.21",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.3.0"
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.3",
+    "@craco/craco": "6.4.3",
     "@graphql-codegen/cli": "2.8.1",
-    "@graphql-codegen/typed-document-node": "^2.3.1",
+    "@graphql-codegen/typed-document-node": "2.3.1",
     "@graphql-codegen/typescript": "2.7.1",
     "@graphql-codegen/typescript-operations": "2.5.1",
-    "@types/node": "^12.20.55",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "concurrently": "^7.2.2",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.7.4",
-    "workbox-webpack-plugin": "^6.5.3"
+    "@types/node": "12.20.55",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "concurrently": "7.2.2",
+    "react-scripts": "5.0.1",
+    "typescript": "4.7.4",
+    "workbox-webpack-plugin": "6.5.3"
   },
   "eslintConfig": {
     "extends": "react-app"
