--- a/craco.tsconfig.json
+++ b/craco.tsconfig.json
@@ -2,24 +2,21 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@dxtr/app": [ "src/app" ],
-      "@dxtr/components": [ "src/components" ],
-      "@dxtr/components/*": [ "src/components/*" ],
-      "@dxtr/containers": [ "src/containers" ],
-      "@dxtr/containers/*": [ "src/containers/*" ],
-      "@dxtr/hooks": [ "src/hooks" ],
-      "@dxtr/hooks/*": [ "src/hooks/*" ],
-      "@dxtr/lib": [ "src/lib" ],
-      "@dxtr/lib/*": [ "src/lib/*" ],
-      "@dxtr/package": [ "package.json" ],
-      "@dxtr/pages": [ "src/pages" ],
-      "@dxtr/pages/*": [ "src/pages/*" ],
-      "@dxtr/redux": [ "src/redux" ],
-      "@dxtr/redux/*": [ "src/redux/*" ]
+      "@dxtr/app": ["src/app"],
+      "@dxtr/components": ["src/components"],
+      "@dxtr/components/*": ["src/components/*"],
+      "@dxtr/containers": ["src/containers"],
+      "@dxtr/containers/*": ["src/containers/*"],
+      "@dxtr/hooks": ["src/hooks"],
+      "@dxtr/hooks/*": ["src/hooks/*"],
+      "@dxtr/lib": ["src/lib"],
+      "@dxtr/lib/*": ["src/lib/*"],
+      "@dxtr/package": ["package.json"],
+      "@dxtr/pages": ["src/pages"],
+      "@dxtr/pages/*": ["src/pages/*"],
+      "@dxtr/redux": ["src/redux"],
+      "@dxtr/redux/*": ["src/redux/*"]
     },
-    "typeRoots": [
-      "./node_modules/@types",
-      "./typings"
-    ]
+    "typeRoots": ["./node_modules/@types", "./typings"]
   }
 }
