--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "concurrently": "7.2.2",
+    "prettier": "2.8.4",
     "react-scripts": "5.0.1",
     "typescript": "4.7.4",
     "workbox-webpack-plugin": "6.5.3"
