--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,7 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -21,5 +17,5 @@
     "target": "es5"
   },
   "extends": "./craco.tsconfig.json",
-  "include": [ "src" ]
+  "include": ["src"]
 }
